k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubedb-monitor
  labels:
    name: kubedb-monitor
